added ticket url functionality to the game state so it can be shared with players that join mid game, fixes #1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,13 @@ packages = [
     "pp",
     "test",
 ]
+
+[tool.coverage.run]
+command_line = "-m pytest"
+branch = true
+source = [
+    "pp",
+]
+
+[tool.coverage.report]
+show_missing = true
