--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.111"
-uvicorn = {extras = ["standard"], version = "^0.30"}
+fastapi = "^0.115"
+uvicorn = { extras = ["standard"], version = "^0.34" }
+python-multipart = "^0.0.20"
+jinja2 = "^3.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5"
